--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,6 +1,17 @@
 2004-09-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client.adb:
+	(Open_Send_Common_Header): Move tunnel creation to Connect.
+	(Send_Authentication_Header): Move to the library level.
+	(Port_Not_Default): Move to the library level.
+	(Create): Connect to server. Need for get certificate just after
+	 connect creation.
+	New implementation could get server certificate even thru proxy just
+	 after connect creation.
+
+2004-09-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.adb:
 	(Open_Send_Common_Header): Make tunnel only when need reconnect.
 	(Create): Do not connect to server. It would be done in
 	 Open_Send_Common_Header.
