--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,16 @@
+2004-09-28  Pascal Obry  <pascal@obry.org>
+
+	* aws-client.adb:
+	(Read_Status_Line): Use 'Length instead of 'Last in the slice. This
+         is cleaner in this case.
+
+	* aws-services-transient_pages.adb:
+	(Register): Rename Need_Start_Cleaner to Need_Start.
+
+	* aws-services-transient_pages.ads:
+	(Register): Rename Need_Start_Cleaner to Need_Start.
+        Update copyright notice.
+
 2004-09-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client.adb:
@@ -45,6 +58,13 @@
 
 	* aws-services-transient_pages-control.adb:
 	(Register): Create cleaner task if necessary.
+
+2004-09-27  Pascal Obry  <pascal@obry.org>
+
+	* aws-client.adb:
+	(Open_Send_Common_Header): Improve comments about tunneling.
+        (Decode_Init): Add missing header box.
+        Minor reformatting.
 
 2004-09-27  Pascal Obry  <pascal@obry.org>
 
