--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,9 +1,15 @@
+2004-09-29  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* agent.adb:
+	Allow back output the headers and the message body with an HTTPS URL.
+	Do not make HTTP_Connection for method GET and Follow_Redirection.
+
 2004-09-25  Pascal Obry  <pascal@obry.org>
 
 	* agent.adb:
 	With an HTTPS URL do not try to output the headers or the message body.
 	Minor reformatting.
-	
+
 	* demos.gpr:
 	(Compiler): Remove option -m (there is no such option on
 	 gcc). This could be used in a Builder package.
