--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-29  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.adb:
+	(Create): Do not connect to server, for be able to call
+	 Set_Proxy_Authentication before socket connection.
+	(Get_Certificate): Make socket connection if necessary.
+
 2004-09-28  Pascal Obry  <pascal@obry.org>
 
 	* aws-client.adb:
