--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,12 @@
+2004-09-29  Pascal Obry  <pascal@obry.org>
+
+	* include.gpr:
+	Minor casing fix.
+
+	* makefile:
+	Extensive changes to support build based on GNAT Project files.
+	The makefile based build has been removed.
+
 2004-09-25  Pascal Obry  <pascal@obry.org>
 
 	* ai302-containers-indefinite_ordered_sets.adb:
