--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-29  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	Removed, not used anymore.
+
 2004-09-07  Pascal Obry  <pascal@obry.org>
 
 	* soap-generator.adb:
