--- a/win32/ChangeLog
+++ b/win32/ChangeLog
@@ -1,3 +1,17 @@
+2004-09-29  Pascal Obry  <pascal@obry.org>
+
+	* win32.gpr:
+	Initial revision.	
+
+	* crypto.def, ssl.def:
+	Initial revision.
+	We do not need the dll2def tool now.
+
+	* makefile:
+	Extensive changes to support build based on GNAT Project files.
+	The makefile based build has been removed.
+	Remove definition file generation.
+
 2004-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* gai_strerror.c:
