--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-04  Pascal Obry  <pascal@obry.org>
+
+	* test_soap3.adb:
+	Serialize test output.
+
 2004-10-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
