--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-06  Pascal Obry  <pascal@obry.org>
+
+	* ai302*, charles*: 
+	Move all ai302 files into ai302 sub-directory to be able to use an
+	 external AI302 installation.
+
 2003-10-04  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* memory_streams.ads:
