--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-06  Pascal Obry  <pascal@obry.org>
 
+	* demos.gpr:
+	(Source_Files): Update to include all sources files. This is
+	 required to build with GNAT 5.03.
+	
+2004-10-06  Pascal Obry  <pascal@obry.org>
+
 	* demos_shared.gpr:
 	(Socket_Type): Move this to the AWS's shared project.
 
