--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-07  Pascal Obry  <pascal@obry.org>
+
+	* demos_ssl.gpr:
+	Remove ssl project.
+
+	* demos.gpr:
+	Remove nossl project.
+	
 2004-10-06  Pascal Obry  <pascal@obry.org>
 
 	* demos.gpr:
