--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-07  Pascal Obry  <pascal@obry.org>
+
+	* src.gpr:
+	Import project nossl.
+
 2004-10-02  Pascal Obry  <pascal@obry.org>
 
 	* aws-net-ssl.adb:
