--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-std__gnat.adb:
+	Remove CR at end of lines.
+
 2004-09-29  Pascal Obry  <pascal@obry.org>
 
 	* src/check_config.c:
