--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,5 +1,8 @@
 2004-10-09  Pascal Obry  <pascal@obry.org>
 
+	* soap5.out, soap6.out, soap7.out:
+	Add missing ending empty line removed with last check-in.
+
 	* tlog.adb:
 	Use a single connection to ensure stable output.
         Minor reformatting.
