--- a/docs/TODO
+++ b/docs/TODO
@@ -168,3 +168,6 @@ implemented:
 - Add reply-all support to the Web_Mail service.
 
 - Add support for SOAP hotplug modules
+
+- Add some ready-to-use write procedure callback in AWS.Net.Log. One for plain
+  text and one for binary data (ala Emacs hexl-mode).
