--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-30  Pascal Obry  <pascal@obry.org>
+
+	* timer.adb:
+	Use Get_Free_Port to find a free port.
+
 2004-10-29  Pascal Obry  <pascal@obry.org>
 
 	* test_net_log.adb, test_net_log.out:
