--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-31  Pascal Obry  <pascal@obry.org>
+
+	* soap-generator-cb.adb:
+	(New_Procedure): Minor generated code layout fix.
+        Update copyright notice.
+
 2004-10-16  Pascal Obry  <pascal@obry.org>
 
 	* soap-xml.adb:
