--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2004-10-31  Pascal Obry  <pascal@obry.org>
+
+	* aws-server-hotplug.adb:
+	(Client_Handler.Delete_All): New procedure to delete all entry in
+         the clients table.
+        (Shutdown): Call Delete_All to remove all client information from
+         the table.
+
+	* aws-hotplug.adb:
+	(Apply): Add circuitry to handle SOAP hotplug module.
+
 2004-10-30  Pascal Obry  <pascal@obry.org>
 
 	* aws-hotplug.adb:
