--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-01  Pascal Obry  <pascal@obry.org>
+
+	* aws-net-std__gnat.adb:
+	Minor reformatting.
+
 2004-10-29  Pascal Obry  <pascal@obry.org>
 
 	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
